source/blender/blenkernel/BKE_lib_id.h
@@ -378,6 +378,9 @@ enum {
   /** Clear asset data (in case the ID can actually be made local, in copy case asset data is never
    * copied over). */
   LIB_ID_MAKELOCAL_ASSET_DATA_CLEAR = 1 << 3,
+
+  /** Clear any liboverride data as part of making this linked data local. */
+  LIB_ID_MAKELOCAL_LIBOVERRIDE_CLEAR = 1 << 4,
 };
 
 /**
